# opennotes

./: .dockerignore  .env.ci  .env.ci.yaml  .env.example  .env.md  .env.yaml.dev  .env.yaml.dev.backup.20251110_125206  .env.yaml.example  .env.yaml.prod  .env.yaml.staging  .gitignore  .pre-commit-config.yaml  AGENT_PROGRESS.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.sharding.yml  docker-compose.test.yml  docker-compose.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_request_creation.py
opennotes-cli/: openapi-client-config.yaml  pyproject.toml
opennotes-cli/src/opennotes_cli/: auth.py  cli.py  display.py  formatting.py  http.py  polling.py
opennotes-cli/tests/: test_analyze_command.py  test_auth.py  test_cli.py  test_copy_requests_flag.py  test_correlation_analysis.py  test_formatting.py  test_huuid_integration.py  test_orchestrator_fields.py  test_profile_recovery.py  test_score_command.py  test_simulation_analysis.py  test_simulation_detailed.py  test_simulation_xlsx.py
opennotes-server/: .env.yaml.example  .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  alembic.ini  docker-entrypoint.sh  mise.toml  ml-requirements.txt  openapi-public.json  openapi.json  openapi.postman_collection.json  openapi.postman_environment.json  openapi.yaml  opennotes_cli.py  optimized_relevance_module.json  pyproject.toml  pyrightconfig.json  pytest.ini  schemathesis.toml  webhooks.db
opennotes-server/alembic/: env.py
opennotes-server/alembic/versions/: 02fa3f3de88f_merge_task_1203_and_task_1146_heads.py  03f349b8269f_task_1238_add_is_public_to_simulation_.py  0451fbf4ce30_add_sim_channel_messages_table.py  0492756116a2_add_author_profile_id_to_notes.py  04fb5a0487df_add_community_server_id_to_notes_and_.py  071d69f63f60_phase_11e_principal_type_not_null.py  0a36caa8cd3b_task_1174_add_ai_model_column_to_notes.py  0a912528f6a9_add_key_prefix_to_api_keys.py  0b070ededde0_migrate_timestamp_to_datetime_with_.py  0bbaec94d025_add_timestamps_to_requests_table.py  0c95d9eab6b7_add_recent_actions_to_sim_agent_memory.py  0dd89d1cf4df_task_1345_add_short_description_to_sim_.py  0f34e2cd94ca_add_rater_profile_id_to_ratings.py  1185d275f39b_backfill_embedding_provider_litellm_to_.py  146b879b198d_add_foreign_key_constraints_to_user_.py  175da5e91d70_remove_message_archive_required_check_.py  187cc4a55d92_add_message_archive_id_to_requests.py  1b62d2d98e7a_add_ai_note_generation_fields_ai_.py  1ca3f92acb46_task_1067_06_add_flashpoint_detection_.py  1db7b2f41382_task_1211_007_add_released_at_index_and_fk_cascade.py  1dceabf5c87e_repoint_copied_requests_to_original_.py  1fc2d611a071_add_user_profile_identity_system.py  254f9cdd210d_user_profiles_id_uuidv7_default.py  27c60ef54e22_merge_task838_and_task799_17_heads.py  2a3373461956_drop_llm_usage_log_table.py  2b136e8f32cf_add_index_on_notes_status.py  2cfe6a0e7724_add_role_to_user_profiles.py  2ef4a64dc36e_add_placeholder_unknown_user.py  3141f92c4208_task_228_make_auto_post_message_id_.py  34353952be97_merge_wp02_wp03_wp04_wp05_heads.py  37e6e78f25ba_merge_task_906_with_main_head.py  380416c4ea14_sync_timestamp_defaults_for_fact_check_.py  3b17fbc895f3_add_acted_on_request_ids_to_sim_agent_.py  3cea1535ffca_merge_migration_heads.py  41e171275262_fix_stuck_zero_message_scans.py  436c8fc4c0c4_wp02_notes_consolidate_author_columns.py  454e533b87ec_sync_schema_drift_fix_timestamp_types_.py  458c433da8d8_enable_rls_on_all_public_tables.py  470bb55476a0_phase_15a_backfill_null_scopes.py  47b2c9e7dc9b_drop_duplicate_unique_constraint_on_.py  (+175 more)
opennotes-server/backups/: README.md
opennotes-server/data/flashpoints/: optimized_detector.json
opennotes-server/docs/: api-migration-notes.md  background-tasks.md  chunk-stats-refresh.md  known-issues.md  large-migrations.md  llm-observability.md  prompt-optimization-workflow.md  public-api-prefix.md  taskiq-hybrid-pattern.md  tracing-user-filtering.md
opennotes-server/scoring_results/: scored_notes_1k_20251028_134750.csv  scoring_summary_1k_20251028_134750.json  user_scores_1k_20251028_134750.csv
opennotes-server/scripts/: audit_is_human_mismatch.py  audit_model_names.sql  backfill_image_descriptions.py  backfill_short_descriptions.sql  benchmark_db_latency.py  cancel_stuck_turn_workflows.py  check_openapi_sync.py  check_schema_consistency.py  cleanup-test-containers.sh  cleanup_bad_archives.py  cleanup_test_containers.py  diagnose_jetstream.py  extract_real_embeddings.py  generate-openapi.py  generate_embeddings.py  generate_openapi.py  generate_test_data.py  get_test_embeddings.py  get_test_embeddings_raw.py  import_fact_check_bureau.py  load_snopes_dataset.py  migrate_message_content_to_archive.py  migrate_users_to_profiles.py  opennotes_cli.py  process_community_notes_data.py  run_audit_worker.py  run_community_notes_scoring.py  run_migrations_with_lock.py  run_scoring_demo.py  run_with_worker.py  seed_api_keys.py  test-messaging-integration.sh  test-migrations.sh  validate_migration.py  validate_scoring.py
opennotes-server/src/: circuit_breaker.py  circuit_breaker_core.py  config.py  config_router.py  database.py  health.py  main.py  public_api.py  scoring_adapter.py  scoring_adapter_mock.py  startup_migrations.py  startup_validation.py  validation.py
opennotes-server/tests/: _model_fixtures.py  conftest.py  manual_test_classification.py  redis_mock.py  test_model_fixtures.py
opennotes-vibecheck-server/: .env.example  .gitignore  Dockerfile  README.md  mise.toml  openapi.json  pyproject.toml
opennotes-vibecheck-server/docs/: adr-gemini-flash-lite-scrape-quality.md  archive-sanitizer-investigation.md  exec-sql-bootstrap.md
opennotes-vibecheck-server/scripts/: audit_vibecheck_schema.py  eval_scd_register.py  eval_utterance_extractor_models.py  generate_openapi.py  run_ladder_e2e.py
opennotes-vibecheck-server/src/: config.py  firecrawl_client.py  main.py  monitoring.py  monitoring_metrics.py  startup.py
opennotes-vibecheck-server/tests/: conftest.py  test_config.py  test_health.py
(+2960 files in other folders)
