[project]
name = "opennotes-server"
version = "0.0.2"
description = "Open Notes Server"
authors = [{name = "Open Notes Team", email = "team@opennotes.ai"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4,<2.0.0",
    "redis>=5.0.0",
    "cryptography>=41.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "httpx>=0.25.2",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    "alembic>=1.13.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "opentelemetry-instrumentation-redis>=0.43b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "python-json-logger>=2.0.7",
    "nats-py>=2.12.0",
    "tenacity>=8.2.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "cachetools>=5.3.0",
    "aiosmtplib>=5.0.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.7.2",
    "torch>=2.1.2",
    "wandb>=0.23.0",
    "xxhash>=3.6.0",
    "litellm>=1.80.11,<2.0.0",
    "chonkie[neural]>=1.3.0,<2.0.0",
    "transformers>=4.36.0,<4.41.0",
    "taskiq>=0.11.0,<1.0.0",
    "taskiq-nats>=0.4.0,<1.0.0",
    "taskiq-redis>=1.0.0,<2.0.0",
    "taskiq-fastapi>=0.3.0,<1.0.0",
    "opentelemetry-instrumentation-logging>=0.43b0",
    "opentelemetry-semantic-conventions>=0.43b0",
    "pyroscope-io>=0.8.0",
    "traceloop-sdk>=0.35.0",
    "dspy>=3.0.0",
    "ruamel.yaml>=0.18.0",
    "setuptools>=80.9.0",
    "trafilatura>=2.0.0,<3.0.0",
    "redis-rate-limiters>=0.3.1,<0.4.0",
    "dbos[otel]>=2.11.0,<3.0.0",
    "opentelemetry-exporter-gcp-trace>=1.11.0",
    "opentelemetry-exporter-gcp-monitoring>=1.11.0a0,<2.0.0",
    "opentelemetry-exporter-gcp-logging>=1.11.0a0,<2.0.0",
    "google-cloud-logging>=3.0",
]

[project.optional-dependencies]
flashpoints-dataset = [
    "convokit>=3.5.0,<4.0.0",
]
scoring = [
    "torch==2.1.2",
    "scipy>=1.11.4,<3.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "pyarrow>=15.0.0",
    "wandb>=0.15.0",
]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "testcontainers[redis,postgres]>=3.7.0",
    "asyncpg>=0.29.0",
    "ruff>=0.1.6",
    "basedpyright>=1.0.0",
    "pandas-stubs>=2.0.0",
    "httpx>=0.25.2",
    "pyyaml>=6.0.1",
    "docker>=7.0.0",
    "psutil>=6.0.0",
    "torch==2.1.2",
    "scipy>=1.11.4,<3.0.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=15.0.0",
    "wandb>=0.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "DTZ",
    "ISC",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "RUF",
]
ignore = [
    "E501",
    "PLR0913",
    "PLR2004",
    "B008",
    "N815",
    "PLR0915",
    "SIM105",
    "ARG001",
    "ARG005",
    "B904",
    "E712",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["PLR2004", "S101", "ARG002", "PLR0912", "PLC0415", "PT019"]
"alembic/**/*.py" = ["PLC0415", "ERA001"]  # Lazy imports and commented code OK in migrations
"scripts/**/*.py" = ["PLC0415", "ERA001"]  # Lazy imports and commented code OK in scripts
"src/tasks/**/*.py" = ["PLC0415"]  # Lazy imports required for TaskIQ tasks to avoid import-time settings validation
"src/monitoring/logging.py" = ["PLC0415"]  # Circular dependency: imports handled in try-except blocks
"src/monitoring/otel.py" = ["PLC0415", "PLW0602", "PLW0603", "ARG002"]  # Lazy imports for optional OTel pkgs; global state for init tracking
"src/monitoring/cloud_trace_logging_exporter.py" = ["PLC0415"]  # Lazy imports for optional GCP packages
"src/monitoring/traceloop.py" = ["PLC0415", "PLW0603"]  # Lazy imports for optional exporters; global state for init tracking
"src/llm_config/manager.py" = ["RUF006"]  # Fire-and-forget background tasks intentional
"src/middleware/profile_tracking.py" = ["RUF006"]  # Fire-and-forget background tasks intentional
"src/database.py" = ["ARG002"]  # TypeDecorator methods require dialect param for base class compatibility
"src/fact_checking/chunking_service.py" = ["PLC0415"]  # Lazy import for NeuralChunker to defer model loading
"src/main.py" = ["E402", "PLC0415"]  # LoggingInstrumentor must be called before imports; lazy pyroscope import for optional profiling
"src/claim_relevance_check/prompt_optimization/augment_dataset.py" = ["PLR0912"]  # augment_dataset() has clear branch structure for interactive/non-interactive modes
"src/dbos_workflows/**/*.py" = ["PLC0415", "PLW0603"]  # Lazy imports required to avoid circular deps; global state for singleton adapter
"src/bulk_content_scan/flashpoint_service.py" = ["PLC0415", "PLW0603"]  # Lazy dspy import to avoid heavy ML deps at startup; global for singleton
"src/bulk_content_scan/flashpoint_utils.py" = ["PLC0415"]  # Lazy dspy import to avoid heavy ML deps at startup
"src/common/filters.py" = ["PLR0911", "PLR0912", "PLC0415"]  # FilterBuilder._build_condition uses match with many operator cases; lazy import for OVERLAP to avoid circular

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "**/.venv", "**/scoring/**"]
extraPaths = ["../communitynotes/scoring/src"]
reportImportCycles = false
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportMissingModuleSource = false
reportPrivateUsage = "warning"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "error"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# bitsandbytes: convokit -> transformers -> bitsandbytes pulls an incompatible version.
# We don't use bitsandbytes at runtime (training quantization lib), so pin to known-good.
override-dependencies = [
    "bitsandbytes==0.48.0",
    "numpy>=1.26.4,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
# ML dependencies - large, rarely changing, installed in separate Docker layer
ml = [
    "chonkie[neural]>=1.3.0,<2.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.11.4,<3.0.0",
    "torch>=2.1.2",
    "transformers>=4.36.0,<4.41.0",
]
dev = [
    "aiohttp>=3.13.2",
    "basedpyright>=1.34.0",
    "docker>=7.0.0",
    "hypothesis>=6.142.5",
    "mypy>=1.19.1",
    "pynacl>=1.6.1",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.1.6",
    "testcontainers[redis,postgres]>=3.7.0",
]
