[project]
name = "opennotes-vibecheck-server"
version = "0.1.0"
description = "Vibecheck backend: URL-based claim extraction and fact-check for vibecheck.opennotes.ai"
authors = [{ name = "Open Notes Team", email = "team@opennotes.ai" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "pydantic-ai>=0.0.49",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "dspy-ai>=2.5.0",
    "supabase>=2.8.0",
    "tenacity>=9.0.0",
    "google-cloud-tasks>=2.16.0",
    "google-auth>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "ruff>=0.6.0",
    "basedpyright>=1.17.0",
    "testcontainers[postgres]>=4.8.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "DTZ",
    "ISC",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "RUF",
]
ignore = [
    "E501",
    "PLR0913",
    "PLR2004",
    "B008",
    "PLR0915",
    "SIM105",
    "ARG001",
    "ARG005",
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["PLR2004", "S101", "ARG002", "PLR0912", "PLC0415", "PT019"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.11"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
